fixes guardar + presupuestos tiene proveedor

--- a/src/main/resources/templates/cargar-criterio.hbs
+++ b/src/main/resources/templates/cargar-criterio.hbs
@@ -85,7 +85,7 @@
                 <div class="space-evenly-vert align-items-start" style="width: -webkit-fill-available">
                     <div class="" style="padding-right: 0;width: -webkit-fill-available">
                         <div class="align-content-start">
-                            <p class="text-sm-start"> Este paso es opcional. </p>
+                            <p class="text-sm-start"> Este paso es opcional </p>
                         </div>
                         <div class="container">
                             {{#each categorias}}
