--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -169,7 +169,7 @@
                     </button>
                 </div>
             {{else}}
-                <p class="card-text text-center display-9"> Sin factura. </p>
+                <p class="card-text text-center display-9"> Sin factura</p>
             {{/if}}
             <div class="d-flex justify-content-end" style="padding-top: 8px">
                 <form action="/upload/{{egresoID}}?pos={{posID}}" method="post" enctype="multipart/form-data"
