--- a/src/main/resources/templates/ingreso.hbs
+++ b/src/main/resources/templates/ingreso.hbs
@@ -81,7 +81,7 @@
                     <p class="card-text">Descripcion: {{ingreso.descripcion}}</p>
                     <p class="card-text">Fecha: {{ingreso.fechaOperacion}}</p>
                     <p class="card-text">Monto Total: {{ingreso.montoTotal}}0 $ </p>
-
+                    {{ingreso}}
                 </div>
             </div>
         </div>
