--- a/src/main/resources/templates/asociar-presupuesto-categoria.hbs
+++ b/src/main/resources/templates/asociar-presupuesto-categoria.hbs
@@ -85,8 +85,8 @@
                 <div class="container">
                     {{#each presupuestos}}
                         <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
-                            <label for="cbox1">
-                                <input type="checkbox" id="cbox1" name="presupuesto" value="{{id}}">
+                            <label for="cbox{{@index}}">
+                                <input type="checkbox" id="cbox{{@index}}" name="presupuesto" value="{{id}}">
                                 Monto Total: {{total}} Descripcion:{{cantidad}} items de {{proveedor.nombreApellidoRazon}}
                             </label> <label
                                 for="cbox2"></label>
@@ -102,8 +102,8 @@
                 <div class="container">
                     {{#each categorias}}
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
-                            <label for="cbox2">
-                                <input type="checkbox" id="cbox2" name="categoria" value="{{id}}">
+                            <label for="cbox{{@index}}">
+                                <input type="checkbox" id="cbox{{@index}}" name="categoria" value="{{id}}">
                                 {{descripcion}} {{#if criterio}}con criterio {{criterio.nombre}} {{/if}}
                             </label>
                         </div>
