--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -124,7 +124,7 @@
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Fecha de
                             Operacion: {{ingreso.fechaOperacion}} </p>
                     {{else}}
-                        <p class="card-text" style="margin-bottom: 0; margin-left: 60px;"> Sin ingresos asociados </p>
+                        <p class="card-text" style="margin-bottom: 0;"> Sin ingresos asociados </p>
                     {{/if}}
 
                     <div class="" style="padding: 16px">
