--- a/src/main/resources/templates/cargar-ingreso.hbs
+++ b/src/main/resources/templates/cargar-ingreso.hbs
@@ -28,7 +28,7 @@
             <button type="button" class="btn btn-dark align-content-center"
                     onclick="location.href='/crearOperacionEgreso'">Crear Operacion de Egreso
             </button>
-            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
+            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='/ingreso'">
                 Cargar Operacion de Ingreso
             </button>
 
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="justify-content-center d-flex" style="margin: 1rem">
-                <button class="btn btn-outline-dark text-center rounded-pill" type="submit">Guardar Egreso</button>
+                <button class="btn btn-outline-dark text-center rounded-pill" type="submit">Guardar Ingreso</button>
             </div>
         </div>
 
