--- a/src/main/resources/templates/crear-medio-pago.hbs
+++ b/src/main/resources/templates/crear-medio-pago.hbs
@@ -31,7 +31,7 @@
             <button type="button" class="btn btn-dark align-content-center"
                     onclick="location.href='/crearOperacionEgreso'">Crear Operacion de Egreso
             </button>
-            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
+            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='/ingreso'">
                 Cargar Operacion de Ingreso
             </button>
 
