--- a/src/main/resources/templates/asociar-egreso-categoria.hbs
+++ b/src/main/resources/templates/asociar-egreso-categoria.hbs
@@ -187,7 +187,7 @@
                                         </select>
                                     </div>
                                     <div class="input-row">
-                                            <input type="text" id="cbox" placeholder="Criterio" name="criterioName" value="-1">
+                                            <input type="text" id="cbox" placeholder="Criterio" name="criterioName">
                                     </div>
                                 </div>
                             </div>
