--- a/src/main/resources/templates/vincular-egreso-ingreso.hbs
+++ b/src/main/resources/templates/vincular-egreso-ingreso.hbs
@@ -87,7 +87,7 @@
                         <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
                             <label for="cbox{{@index}}">
                                 <input type="checkbox" id="cbox{{@index}}" name="egreso" checked="checked" disabled="disabled" value="{{id}}">
-                                Nro: {{id}} Descripcion:{{descripcion}}
+                                Nro: {{numeroOperacion}} "{{descripcion}}"
                                 <input type="hidden" id="hidden-check1" name="egreso" value="{{id}}" />
                             </label>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
                             <label for="cbox{{@index}}">
                                 <input type="checkbox" id="cbox{{@index}}" name="ingreso" checked="checked" disabled="disabled" value="{{id}}">
-                                Nro: {{id}} Descripcion:{{descripcion}}
+                                Nro: {{id}} "{{descripcion}}"
                                 <input type="hidden" id="hidden-check2" name="ingreso" value="{{id}}" />
                             </label>
                         </div>
