--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -134,7 +134,7 @@
                             Presupuestos</p>
 
                         {{#each presupuestos}}
-                            <div class="card text-dark bg-light-tp mb-3">
+                            <div class="card text-dark mb-3" style="background-color: #f8fbff; padding: 8px;">
 
                                 <p class="card-title display-9 text-center">
                                     Presupuesto {{inc @index}}</p>
