--- a/src/main/resources/templates/ingreso.hbs
+++ b/src/main/resources/templates/ingreso.hbs
@@ -74,7 +74,7 @@
 <div class="d-flex justify-content-center" style="padding: 64px">
     <div class="card text-dark bg-light-tp mb-3"
          style="min-height: 20rem; min-width: 24rem; max-width: 70%">
-        <div class="card-header display-7 text-center"> Ingreso </div>
+        <div class="card-header display-7 text-center"> Ingreso {{ingreso.id}}  </div>
         <div class="card-body" style="margin-top: 32px">
             <div class="space-evenly-vert align-items-start">
                 <div class="justify-content-start" style="padding-right: 0">
