--- a/src/main/resources/templates/visualizar-egresos.hbs
+++ b/src/main/resources/templates/visualizar-egresos.hbs
@@ -60,7 +60,7 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button type="button" class="btn btn-dark" onclick="location.href='ver-bandeja'">
+            <button type="button" class="btn btn-dark" onclick="location.href='/ver-bandeja'">
                 Bandeja de Entrada
             </button>
             <form action="/logout" method="get" class="form">
